Change require sirv to version 7

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "sirv/magento2": "^5|^6"
+        "sirv/magento2": "^5|^6|^7"
     },
     "autoload": {
         "files": [
